Changelog for miniShop.

1.7.0 (15.06.2012)
=============
- [#45] Количество результатов для таблиц берется из системной настройки 'default_per_page'
-----
- [#45] Number of results for grids now taken from system setting 'default_per_page'

1.6.2 rc (13.05.2012)
=============
- Добавлены параметры сниппету miniShop.
- Добавлены параметры сниппету msGetGallery.
- Добавлены параметры сниппету msGetResources. Также переведены на русский все оригинальные параметры getResources.
- msGetGoodsPlaceholder и msGetGoodsPlaceholders теперь поддерживают получение тэгов товара
- Небольшие улучшения кода сниппетов
-----
- Added parameters to snippet miniShop. 
- Added parameters to snippet msGetGallery.
- Added parameters to snippet. Also translated into Russian all original parameters of getResources.
- msGetGoodsPlaceholder and msGetGoodsPlaceholders are now supporting retrieving tags of product
- Small improvements of code of snippets.


1.6.1 rc (06.05.2012)
=============
- Убрал отправку покупателя на z-payment.ru по умолчанию из чанков.
- Добавлен richtext редактор в окно редактирования товара.
- Добавлены теги для товаров. Теперь вы можете связывать товары через отдельную таблицу.
- Новый метод getTagged в классе miniShop, выводит ресурсы подходящие по тегам.
- Улучшено копирование товаров
- Исправлено удаление свойств товаров в таблицах miniShop.
- Улучшено контекстное меню товаров.
-----
- Removed redirect customers to z-payment.ru by default from chunks.
- Added richtext editor to goods editor window.
- Added tags for goods. Now you can linking goods through separate table.
- New method getTagged in miniShop class - selecting resources by tags.
- Improved duplicating of goods
- Fixed deleting goods properties in a miniShop tables.
- Improved context menu of goods.

1.6.0 rc (28.04.2012)
=============
- Добавлен вызов событий для запуска плагинов при изменении товаров из компонента. mSearch теперь будет индексировать изменения товаров.